Criação de vários arquivos CSS
Eu decidi exportar boa parte do CSS que fiz dentro da tag style de vários arquivos para novos arquivos em formato CSS.

--- a/_textos-css-tutorial/1-css-selectors.html
+++ b/_textos-css-tutorial/1-css-selectors.html
@@ -6,60 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CSS Selectors</title>
     <link rel="stylesheet" href="../_css/geral-link.css"/>
+    <link rel="stylesheet" href="../_css/css-selectors.css"/>
     <link rel="icon" type="image/x-icon" href="../_imagens/blue-kinstone.png"/>
-    <style>
-        p {
-            text-align: center;
-            color: green;
-        }
-
-        #id2 {
-            text-align: center;
-            color: yellowgreen;
-        }
-        
-        .center {
-            text-align: center;
-            color: red;
-        }
-
-        p.center2 {
-            text-align: center;
-            color: goldenrod;
-        }
-
-        #center {
-            text-align: center;
-        }
-
-        
-
-        p.center3 {
-            text-align: center;
-            color: orange;
-        }
-
-        p.large {
-            font-size: 200%;
-        }
-
-        * {
-            text-indent: 20pt;
-        }
-
-        h1#center4, h2#center4, p#center4 {
-            color: royalblue;
-            text-align: center;
-        }
-
-        div {
-            font-size: 12pt;
-        }
-
-        span {
-            font-weight: bold;
-        }
-    </style>
 </head>
 <body>
     <div id="link">
