--- a/_textos-css-tutorial/12-css-text-alignment.html
+++ b/_textos-css-tutorial/12-css-text-alignment.html
@@ -7,109 +7,7 @@
     <title>CSS Text Alignment</title>
     <link rel="icon" type="image/x-icon" href="../_imagens/blue-kinstone.png"/>
     <link rel="stylesheet" href="../_css/geral-link.css"/>
-    <style>
-        div.examples p {
-            padding: 5px;
-        }
-
-        p.one {
-            text-align: justify;
-        }
-
-        p.two {
-            text-align: center;
-        }
-
-        p.three {
-            text-align: right;
-        }
-
-        p.rtlfour {
-            direction: rtl;
-            unicode-bidi: bidi-override;
-        }
-
-        p.ltrfour {
-            direction: ltr;
-            unicode-bidi: bidi-override;
-        }
-
-        p.rtlfive {
-            direction: rtl;
-            unicode-bidi: embed;
-        }
-
-        p.ltrfive {
-            direction: ltr;
-            unicode-bidi: embed;
-        }
-        
-        p.rtlsix {
-            direction: rtl;
-            unicode-bidi: isolate;
-        }
-
-        p.ltrsix {
-            direction: ltr;
-            unicode-bidi: isolate;
-        }
-
-        p.rtlseven {
-            direction: rtl;
-            unicode-bidi: isolate-override;
-        }
-
-        p.ltrseven {
-            direction: ltr;
-            unicode-bidi: isolate-override;
-        }
-
-        p.rtleight {
-            direction: rtl;
-            unicode-bidi: plaintext;
-        }
-
-        p.ltreight {
-            direction: rtl;
-            unicode-bidi: plaintext;
-        }
-
-        p.bold {
-            font-weight: bold;
-        }
-
-        img.one {
-            vertical-align: text-top;
-        }
-
-        img.two {
-            vertical-align: baseline;
-        }
-
-        img.three {
-            vertical-align: text-bottom;
-        }
-
-        img.four {
-            vertical-align: sub;
-        }
-
-        img.five {
-            vertical-align: super;
-        }
-
-        img.six {
-            vertical-align: middle;
-        }
-
-        img.seven {
-            vertical-align: bottom;
-        }
-
-        img.eight {
-            vertical-align: top;
-        }
-    </style>
+    <link rel="stylesheet" href="../_css/css-text-alignment.css"/>
 </head>
 <body>
     <div id="link">
