--- a/_textos-css-tutorial/12-css-text-color.html
+++ b/_textos-css-tutorial/12-css-text-color.html
@@ -7,61 +7,7 @@
     <title>CSS Text</title>
     <link rel="icon" type="image/x-icon" href="../_imagens/blue-kinstone.png"/>
     <link rel="stylesheet" href="../_css/geral-link.css"/>
-    <style>
-        div.example {
-            border: 2px solid steelblue;
-            padding: 8px;
-        }
-
-        h1.example {
-            text-align: center;
-            text-transform: uppercase;
-            color: olivedrab;
-        }
-
-        p.example {
-            text-indent: 50px;
-            text-align: justify;
-            letter-spacing: 3px;
-        }
-
-        a {
-            text-decoration: none;
-            color: steelblue;
-        }
-
-        p.one {
-            color: seagreen;
-        }
-
-        p.two {
-            color: hsl(240, 100%, 50%);
-        }
-
-        p.three {
-            color: salmon;
-        }
-
-        div.examples p{
-            padding: 5px;
-            text-align: center;
-        }
-
-        p.four {
-            color: steelblue;
-            background-color: orange;
-        }
-
-        p.five {
-            color: seagreen;
-            background-color: lightgreen;
-        }
-
-        p.six {
-            color: salmon;
-            background-color: lightslategray;
-        }
-    </style>
+    <link rel="stylesheet" href="../_css/css-text-color.css"/>
 </head>
 <body>
     <div id="link">
