--- a/_textos-css-tutorial/12-css-text-spacing.html
+++ b/_textos-css-tutorial/12-css-text-spacing.html
@@ -7,59 +7,7 @@
     <title>CSS Text Spacin</title>
     <link rel="icon" type="image/x-icon" href="../_imagens/blue-kinstone.png"/>
     <link rel="stylesheet" href="../_css/geral-link.css"/>
-    <style>
-        p.one {
-            text-indent: 10px;
-        }
-
-        p.two {
-            text-indent: 30px;
-        }
-
-        p.three {
-            letter-spacing: 8px;
-        }
-
-        p.four {
-            letter-spacing: -1px;
-        }
-
-        p.five {
-            line-height: 25pt;
-        }
-
-        p.six {
-            line-height: 45px;
-        }
-
-        p.seven {
-            word-spacing: 12px;
-        }
-
-        p.eight {
-            word-spacing: -1px;
-        }
-
-        p.nine {
-            white-space: nowrap;
-        }
-
-        p.ten{
-            white-space: pre;
-        }
-
-        p.eleven{
-            white-space: pre-line;
-        }
-
-        p.twelve{
-            white-space: pre-wrap;
-        }
-
-        span {
-            font-weight: bold;
-        }
-    </style>
+    <link rel="stylesheet" href="../_css/css-text-spacing.css"/>
 </head>
 <body>
     <div id="link">
