--- a/_textos-css-tutorial/13-css-font-size.html
+++ b/_textos-css-tutorial/13-css-font-size.html
@@ -7,47 +7,7 @@
     <title>CSS Font Size</title>
     <link rel="stylesheet" href="../_css/geral-link.css"/>
     <link rel="icon" type="image/x-icon" href="../_imagens/blue-kinstone.png"/>
-    <style>
-        div {
-            font-size: 100%;
-        }
-        
-        span {
-            font-weight: bold;
-        }
-
-        div.examples p {
-            text-align: center;
-        }
-
-        p.pxone {
-            font-size: 15px;
-        }
-
-        p.pxtwo {
-            font-size: 30px;
-        }
-
-        p.emone {
-            font-size: 0.9375em;
-        }
-
-        p.emtwo {
-            font-size: 1.875em;
-        }
-
-        p.vwone {
-            font-size: 1vw;
-        }
-
-        p.vwtwo {
-            font-size: 2vw;
-        }
-
-        p.vwthree {
-            font-size: 4vw;
-        }
-    </style>
+    <link rel="stylesheet" href="../_css/css-font-size.css"/>
 </head>
 <body>
     <div id="link">
