--- a/_textos-css-tutorial/13-css-font-style.html
+++ b/_textos-css-tutorial/13-css-font-style.html
@@ -6,43 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CSS Font Style</title>
     <link rel="stylesheet" href="../_css/geral-link.css"/>
+    <link rel="stylesheet" href="../_css/css-font-style.css"/>
     <link rel="icon" type="image/x-icon" href="../_imagens/blue-kinstone.png"/>
-    <style>
-        div.examples p{
-            text-align: center;
-            font-size: 14pt;
-        }
-
-        p.normal {
-            font-style: normal;
-            font-weight: normal;
-            font-variant: normal;
-        }
-
-        p.italic {
-            font-style: italic;
-        }
-
-        p.oblique {
-            font-style: oblique;
-        }
-
-        p.bold {
-            font-weight: bold;
-        }
-
-        p.bolder {
-            font-weight: bolder;
-        }
-
-        p.small {
-            font-variant: small-caps;
-        }
-
-        span {
-            font-weight: bold;
-        }
-    </style>
 </head>
 <body>
     <div id="link">
