--- a/_textos-css-tutorial/13-css-font-web-safe-and-fallback.html
+++ b/_textos-css-tutorial/13-css-font-web-safe-and-fallback.html
@@ -6,56 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CSS Web Safe Fonts</title>
     <link rel="stylesheet" href="../_css/geral-link.css"/>
+    <link rel="stylesheet" href="../_css/css-font-web-safe-and-fallback.css"/>
     <link rel="icon" type="image/x-icon" href="../_imagens/blue-kinstone.png"/>
-    <style>
-        div.examples p{
-            border: 5px olivedrab solid;
-            margin: 0px 200px 15px 200px;
-            font-size: 16pt;
-            text-align: center;
-            padding: 5px;
-        }
-
-        p.one {
-            font-family: Arial, sans-serif;
-        }
-
-        p.two {
-            font-family: Verdana, sans-serif;
-        }
-
-        p.three {
-            font-family: Helvetica, sans-serif;
-        }
-
-        p.four {
-            font-family: Tahoma, sans-serif;
-        }
-
-        p.five {
-            font-family: 'Trebuchet MS', sans-serif;
-        }
-
-        p.six {
-            font-family: 'Time New Roman', serif;
-        }
-
-        p.seven {
-            font-family: Georgia, serif;
-        }
-
-        p.eight {
-            font-family: Garamond, serif;
-        }
-
-        p.nine {
-            font-family: 'Courier New', monospace;
-        }
-
-        p.ten {
-            font-family: 'Brush Script MT', cursive;
-        }
-    </style>
 </head>
 <body>
     <div id="link">
