--- a/_textos-css-tutorial/13-css-google-fonts.html
+++ b/_textos-css-tutorial/13-css-google-fonts.html
@@ -6,59 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CSS Google Fonts</title>
     <link rel="stylesheet" href="../_css/geral-link.css"/>
+    <link rel="stylesheet" href="../_css/css-google-fonts.css"/>
     <link rel="icon" type="image/x-icon" href="../_imagens/blue-kinstone.png"/>
     <link href="https://fonts.googleapis.com/css2?family=Zen+Kurenaido&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Irish+Grover&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Cairo&family=Dancing+Script&family=Festive&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Sofia&effect=fire-animation|3d|emboss" rel="stylesheet">
-    <style>
-        div.examples p {
-            text-align: center;
-            font-size: 14pt;
-        }
-
-        div.example-effect p {
-            text-align: center;
-            font-size: 14pt;
-            font-family: 'Sofia', sans-serif;
-        }
-        
-        /*font-family: 'Zen Kurenaido', sans-serif;*/
-        p.one {
-            font-family: 'Zen Kurenaido', sans-serif;
-        }
-
-        /*font-family: 'Irish Grover', cursive;*/
-
-        p.two {
-            font-family: 'Irish Grover', cursive;
-        }
-        
-        /*font-family: 'Cairo', sans-serif;
-        font-family: 'Dancing Script', cursive;
-        font-family: 'Festive', cursive;
-        font-family: 'Irish Grover', cursive;*/
-
-        p.three {
-            font-family: 'Cairo', sans-serif;
-        }
-
-        p.four {
-            font-family: 'Dancing Script', cursive;
-        }
-
-        p.five {
-            font-family: 'Festive', cursive;
-            font-size: 20px;
-            text-shadow: 6px 6px 6px #ababab;
-        }
-
-        p.six {
-            font-family: 'Irish Grover', cursive;
-            font-size: 20px;
-            text-shadow: 6px 6px 6px #ababab;
-        }
-    </style>
 </head>
 <body>
     <div id="link">
