--- a/_textos-css-tutorial/16-css-lists.html
+++ b/_textos-css-tutorial/16-css-lists.html
@@ -6,76 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CSS Lists</title>
     <link rel="stylesheet" href="../_css/geral-link.css"/>
+    <link rel="stylesheet" href="../_css/css-lists.css"/>
     <link rel="icon" type="image/x-icon" href="../_imagens/blue-kinstone.png"/>
-    <style>
-        div.left {
-            display: block;
-            position: relative;
-            float: left;
-            width: 32.5vw;
-        }
-
-        div.right {
-            display: block;
-            position: relative;
-            float: right;
-            width: 32.5vw;
-        }
-
-        h1 {
-            margin-bottom: 0;
-        }
-
-        ul.image {
-            list-style-image: url('../_imagens/li-image.png');
-        }
-
-        ul.one {
-            list-style-position: outside;
-        }
-        
-        ul.two {
-            list-style-position: inside;
-        }
-
-        ul.three {
-            list-style: square outside;
-        }
-
-        ul.four {
-            list-style: circle inside url('../_imagens/li-image.png');
-        }
-
-        ul.five {
-            width: 25vw;
-            background-color: tomato;
-            padding: 15px;
-            margin: 10px auto 10px auto;
-        }
-
-        ul.five li {
-            background-color: steelblue;
-            padding: 10px;
-            margin: 10px;
-        }
-
-        ol.one {
-            width: 25vw;
-            background-color: green;
-            padding: 15px;
-            margin: 10px auto 10px auto;
-        }
-
-        ol.one li {
-            background-color: lightgreen;
-            padding: 10px;
-            margin-left: 10px;
-        }
-
-        span {
-            font-weight: bold;
-        }
-    </style>
 </head>
 <body>
     <div id="link">
