--- a/_textos-css-tutorial/17-css-table-borders.html
+++ b/_textos-css-tutorial/17-css-table-borders.html
@@ -6,63 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CSS Tables</title>
     <link rel="stylesheet" href="../_css/geral-link.css"/>
+    <link rel="stylesheet" href="../_css/css-table-borders.css"/>
     <link rel="icon" type="image/x-icon" href="../_imagens/blue-kinstone.png"/>
-    <style>
-        div.example table, div.example tr, div.example th, div.example td {
-            margin: 0 auto 0 auto;
-            border: 2px solid black;
-        }
-
-        div.example tr, div.example th, div.example td {
-            padding: 5px;
-        }
-
-        div.example table.one {
-            width: 80%;
-        }
-        
-        div.example table.two {
-            border-collapse: collapse;
-        }
-
-        table.customers {
-            margin: 0 auto 0 auto;
-            border-collapse: collapse;
-            text-align: left;
-            width: 80%;
-        }
-
-        table.customers tr, table.customers th, table.customers td {
-            border: 1px solid #ddd;
-            padding: 12px;
-        }
-
-        table.customers th {
-            background-color: #04AA6D;
-            color: white;
-            font-family: Arial, Helvetica, sans-serif;
-        }
-
-        table.customers td {
-            font-family: 'Times New Roman', Times, serif;
-        }
-        table.customers tr:nth-child(even) {
-            background-color: #f2f2f2;
-        }
-
-        table.customers tr:nth-child(odd) {
-            background-color: white;
-        }
-
-        table.customers tr:hover {
-            background-color: #ddd;
-        }
-
-        caption {
-            caption-side: bottom;
-            margin-top: 10px;
-        }
-    </style>
 </head>
 <body>
     <div id="link">
