--- a/_textos-css-tutorial/6-css-border-color.html
+++ b/_textos-css-tutorial/6-css-border-color.html
@@ -6,48 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CSS Border Color</title>
     <link rel="stylesheet" href="../_css/geral-link.css"/>
+    <link rel="stylesheet" href="../_css/css-border-color.css"/>
     <link rel="icon" type="image/x-icon" href="../_imagens/blue-kinstone.png"/>
-    <style>
-        h3 {
-            text-align: center;
-            padding: 5px;
-        }
-
-        h3#um {
-            border-style: dashed;
-            border-width: 10px;
-            border-color: orange;
-        }
-
-        h3#dois {
-            border-style: dotted;
-            border-width: 10px;
-            border-color: orangered;
-        }
-
-        h3#tres {
-            border-style: solid;
-            border-width: 10px;
-        }
-
-        h3#quatro{
-            border-style: dotted;
-            border-width: 10px;
-            border-color: palegoldenrod palegreen paleturquoise palevioletred;
-        }
-
-        h3#cinco {
-            border-style: solid;
-            border-width: 10px;
-            border-color: lightblue lightcoral lightcyan lightgoldenrodyellow;
-        }
-
-        h3#seis {
-            border-style: solid;
-            border-width: 10px;
-            border-color: transparent lightcoral lightcyan lightgoldenrodyellow;
-        }
-    </style>
 </head>
 <body>
     <div id="link">
