--- a/_textos-css-tutorial/6-css-borders.html
+++ b/_textos-css-tutorial/6-css-borders.html
@@ -6,30 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CSS Borders</title>
     <link rel="stylesheet" href="../_css/geral-link.css"/>
-    <link rel="icon" type="image/x-icon" href="../_imagens/blue-kinstone.png"/>
-    <style>
-        h3 {
-            padding: 5px;
-            text-align: center;
-        }
-        
-        span {
-            font-weight: bold;
-            color: midnightblue;
-        }
-
-        h3.dotted {border-style: dotted;}
-        h3.dashed {border-style: dashed;}
-        h3.solid {border-style: solid;}
-        h3.double {border-style: double;}
-        h3.groove {border-style: groove; border-color: orange; border-width: 10px;}
-        h3.ridge {border-style: ridge; border-color: orangered; border-width: 10px;}
-        h3.inset {border-style: inset; border-color: salmon; border-width: 10px;}
-        h3.outset {border-style: outset;  border-color: sandybrown; border-width: 10px;}
-        h3.none {border-style: none;}
-        h3.hidden {border-style: hidden;}
-        h3.mix {border-style: dotted dashed solid double;}
-    </style> 
+    <link rel="stylesheet" href="../_css/css-borders.css"/>
+    <link rel="icon" type="image/x-icon" href="../_imagens/blue-kinstone.png"/> 
 </head>
 <body>
     <div id="link">
