--- a/_textos-css-tutorial/17-css-table-alignment.html
+++ b/_textos-css-tutorial/17-css-table-alignment.html
@@ -6,69 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CSS Table Alignment</title>
     <link rel="stylesheet" href="../_css/geral-link.css"/>
+    <link rel="stylesheet" href="../_css/css-table-alignment.css"/>
     <link rel="icon" type="image/x-icon" href="../_imagens/blue-kinstone.png"/>
-    <style>
-        table {
-            margin: 0 auto 0 auto;
-        }
-
-        table, tr, th, td {
-            border: 2px solid black;
-        }
-        
-        div.examples table, div.examples tr, div.examples th, div.examples td {
-            text-align: center;
-            margin: 0 auto 0 auto;
-        }
-
-        table td {
-            padding: 5px;
-        }
-
-        table.one, table.three {
-            width: 80%;
-            border-collapse: collapse;
-        }
-
-        table.one th, table.three th {
-            height: 50px;
-        }
-
-        table.two, table.four {
-            width: 50%;
-            border-collapse: collapse;
-        }
-
-        table.two td, table.four td {
-            height: 30px;
-        }
-
-        table.two th, table.four th {
-            height: 60px;
-            
-        }
-
-        table.two td, table.two th, table.four td, table.four th {
-            text-align: left;
-            border-collapse: collapse;
-        }
-
-        table.three td {
-            height: 45px;
-            padding: 10px;
-            vertical-align: top;
-        }
-
-        table.four td {
-            height: 25px;
-            padding: 10px;
-            vertical-align: bottom;
-        }
-
-        span {
-            font-weight: bold;
-        }
-    </style>
 </head>
 <body>
     <div id="link">
