--- a/_textos-css-tutorial/17-css-table-size.html
+++ b/_textos-css-tutorial/17-css-table-size.html
@@ -6,46 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CSS Table Size</title>
     <link rel="stylesheet" href="../_css/geral-link.css"/>
+    <link rel="stylesheet" href="../_css/css-table-size.css"/>
     <link rel="icon" type="image/x-icon" href="../_imagens/blue-kinstone.png"/>
-    <style>
-        table, tr, th, td {
-            margin: 0 auto 0 auto;
-            border: 2px solid black;
-        }
-
-        table td {
-            text-align: center;
-        }
-
-        table td {
-            padding: 3px;
-        }
-
-        table.one {
-            width: 80%;
-            border-collapse: collapse;
-            margin-bottom: 20px;
-        }
-
-        table.one th {
-            height: 50px;
-        }
-
-        table.two {
-            width: 50%;
-            border-collapse: collapse;
-        }
-
-        table.two td {
-            height: 30px;
-            border-collapse: collapse;
-        }
-
-        table.two th {
-            height: 60px;
-            border-collapse: collapse;
-        }
-    </style>
 </head>
 <body>
     <div id="link">
