--- a/_textos-css-tutorial/6-css-border-sides.html
+++ b/_textos-css-tutorial/6-css-border-sides.html
@@ -5,41 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../_css/geral-link.css"/>
+    <link rel="stylesheet" href="../_css/css-border-sides.css"/>
     <link rel="icon" type="image/x-icon" href="../_imagens/blue-kinstone.png"/>
     <title>CSS Border Sides</title>
-    <style>
-        h3 {
-            padding: 5px;
-            text-align: center;
-        }
-
-        h3#um {
-            border-color: steelblue;
-            border-top-style: dotted;
-            border-bottom-style: dotted;
-            border-left-style: solid;
-            border-right-style: solid;
-            border-width: 5px;
-        }
-
-        h3#dois {
-            border-width: 5px;
-            border-color: steelblue;
-            border-style: dotted solid;
-        }
-
-        h3#tres {
-            border-width: 5px;
-            border-color: steelblue;
-            border-style: double dashed dotted solid;
-        }
-
-        h3#quatro {
-            border-width: 5px;
-            border-color: steelblue;
-            border-style: double dotted solid;
-        }
-    </style>
 </head>
 <body>
     <div id="link">
