--- a/_textos-css-tutorial/7-css-margins.html
+++ b/_textos-css-tutorial/7-css-margins.html
@@ -7,40 +7,7 @@
     <title>CSS Margins</title>
     <link rel="icon" type="image/x-icon" href="../_imagens/blue-kinstone.png"/>
     <link rel="stylesheet" href="../_css/geral-link.css"/>
-    <style>
-        h3 {
-            text-align: center;
-            padding: 5px;
-        }
-
-        h3#um {
-            margin-top: 10px;
-            margin-right: 15px;
-            margin-bottom: 20px;
-            margin-left: 25px;
-            border: 2px solid orangered;
-        }
-
-        h3#dois {
-            margin: 10px auto 10px auto;
-            border: 2px solid orangered;
-        }
-        
-        h3#tres {
-            margin: 0px 0px 60px 0px;
-            border: 2px solid orange;
-        }
-
-        h3#quatro {
-            margin: 75px 0px 135px 0px;
-            border: 2px solid orange;
-        }
-        
-        h3#cinco {
-            margin: 0px;
-            border: 2px solid orange;
-        }
-    </style>
+    <link rel="stylesheet" href="../_css/css-margins.css"/>
 </head>
 <body>
     <div id="link">
