Organização do código CSS
A partir daqui, se eu quiser deixar algum trecho em negrito, basta usar: <span class="bold"> e se eu quiser destacar algo que fiquei em dúvida, basta usar <span class="doubt">. Eu fiz essas mudanças nos arquivos que se encaixavam nesses casos.

Não sei se é o mais adequado a se fazer, mas por enquanto será assim.

--- a/_textos-css-tutorial/1-css-selectors.html
+++ b/_textos-css-tutorial/1-css-selectors.html
@@ -15,11 +15,11 @@
             <h1>CSS Selectors</h1>
             <h2>Temos 5 categorias de seletores:</h2>
             <ul>
-                <li><span>Simple selectors</span> (seleciona elementos baseados em name, id ou class)</li>
-                <li><span>Combinator selectors</span> (seleciona elementos baseados numa relação específica entre eles)</li>
-                <li><span>Pseudo-class selectors</span> (seleciona elementos baseados num certo estado)</li>
-                <li><span>Pseudo-elements selectors</span> (seleciona e estiliza uma parte de um elemento)</li>
-                <li><span>Attribute selectors</span> (seleciona elementos baseados num atributo ou um valor de atributo)</li>
+                <li><span class="bold">Simple selectors</span> (seleciona elementos baseados em name, id ou class)</li>
+                <li><span class="bold">Combinator selectors</span> (seleciona elementos baseados numa relação específica entre eles)</li>
+                <li><span class="bold">Pseudo-class selectors</span> (seleciona elementos baseados num certo estado)</li>
+                <li><span class="bold">Pseudo-elements selectors</span> (seleciona e estiliza uma parte de um elemento)</li>
+                <li><span class="bold">Attribute selectors</span> (seleciona elementos baseados num atributo ou um valor de atributo)</li>
             </ul>
             <h2>Sobre os seletores simples nós temos:</h2>
             <h2>Element selector</h2>
