--- a/_textos-css-tutorial/11-css-outline.html
+++ b/_textos-css-tutorial/11-css-outline.html
@@ -41,16 +41,16 @@
             <p>Para mudar o estilo do contorno use "outline-style: ;".</p>
             <p>Ele pode assumir os seguintes valores:</p>
             <ul type="circle">
-                <li><span>dotted</span> - Cria um contorno pontilhado;</li>
-                <li><span>dashed</span> - Cria um contorno tracejado;</li>
-                <li><span>solid</span> - Cria um contorno sólido;</li>
-                <li><span>double</span> - Cria um contorno duplo;</li>
-                <li><span>groove</span> - Cria um contorno 3D em que o contorno superior esquerdo assumirá um tom diferente da cor selecionada. O efeito depende da cor do contorno. Parece um quadro, da uma impressão de profundidade;</li>
-                <li><span>ridge</span> - Cria um contorno 3D em que o contorno superior esquerdo assumirá a cor selecionada. O efeito depende da cor do contorno. Parece um quadro, da uma impressão de profundidade;</li>
-                <li><span>inset</span> - Cria um contorno 3D em que o contorno superior esquerdo assumirá um tom diferente da cor selecionada. O efeito depende da cor do contorno;</li>
-                <li><span>outset</span> - Cria um contorno 3D em que o contorno superior esquerdo assumirá um tom a cor selecionada. O efeito depende da cor do contorno;</li>
-                <li><span>none</span> - O elemento fica sem contorno;</li>
-                <li><span>hidden</span> - Cria um contorno escondido. Não sei bem pra que serve.</li>
+                <li><span class="bold">dotted</span> - Cria um contorno pontilhado;</li>
+                <li><span class="bold">dashed</span> - Cria um contorno tracejado;</li>
+                <li><span class="bold">solid</span> - Cria um contorno sólido;</li>
+                <li><span class="bold">double</span> - Cria um contorno duplo;</li>
+                <li><span class="bold">groove</span> - Cria um contorno 3D em que o contorno superior esquerdo assumirá um tom diferente da cor selecionada. O efeito depende da cor do contorno. Parece um quadro, da uma impressão de profundidade;</li>
+                <li><span class="bold">ridge</span> - Cria um contorno 3D em que o contorno superior esquerdo assumirá a cor selecionada. O efeito depende da cor do contorno. Parece um quadro, da uma impressão de profundidade;</li>
+                <li><span class="bold">inset</span> - Cria um contorno 3D em que o contorno superior esquerdo assumirá um tom diferente da cor selecionada. O efeito depende da cor do contorno;</li>
+                <li><span class="bold">outset</span> - Cria um contorno 3D em que o contorno superior esquerdo assumirá um tom a cor selecionada. O efeito depende da cor do contorno;</li>
+                <li><span class="bold">none</span> - O elemento fica sem contorno;</li>
+                <li><span class="bold">hidden</span> - Cria um contorno escondido. Não sei bem pra que serve.</li>
             </ul>
             <p>Veja os exemplos a seguir:</p>
             <h4 class="dotted">A dotted outline with a olivedrab border.</h4>
