--- a/_textos-css-tutorial/12-css-text-spacing.html
+++ b/_textos-css-tutorial/12-css-text-spacing.html
@@ -57,7 +57,7 @@
                 Texto de teste.
                 Texto de teste.
             </p>
-            <p><span>"white-space: nowrap;"</span></p>
+            <p><span class="bold">"white-space: nowrap;"</span></p>
             <p class="nine">
                 Texto de teste.
 
@@ -72,7 +72,7 @@
                 Texto de teste.
                 Texto de teste...
             </p>
-            <p><span>"white-space: pre;" - Não entendi bem como funciona.</span></p>
+            <p><span class="bold">"white-space: pre;" - Não entendi bem como funciona.</span></p>
             <p class="ten">
                 Texto de teste.
 
@@ -91,7 +91,7 @@
                 Texto de teste.
                 Texto de teste.
             </p>
-            <p><span>"white-space: pre-line;" - Não entendi bem como funciona.</span></p>
+            <p><span class="bold">"white-space: pre-line;" - Não entendi bem como funciona.</span></p>
             <p class="eleven">
                 Texto de teste.
 
@@ -110,7 +110,7 @@
                 Texto de teste.
                 Texto de teste.
             </p>
-            <p><span>"white-space: pre-wrap;" - Não entendi bem como funciona.</span></p>
+            <p><span class="bold">"white-space: pre-wrap;" - Não entendi bem como funciona.</span></p>
             <p class="twelve">
                 Texto de teste.
 
