--- a/_textos-css-tutorial/13-css-font-size.html
+++ b/_textos-css-tutorial/13-css-font-size.html
@@ -29,11 +29,11 @@
             </ul>
             <p>Veja a seguri algumas formas de definir o tamanho de uma fonte:</p>
             <ul type="circle">
-                <li><span>px;</span></li>
-                <li><span>pt;</span></li>
-                <li><span>em;</span></li>
-                <li><span>percent;</span></li>
-                <li><span>vw.</span></li>
+                <li><span class="bold">px;</span></li>
+                <li><span class="bold">pt;</span></li>
+                <li><span class="bold">em;</span></li>
+                <li><span class="bold">percent;</span></li>
+                <li><span class="bold">vw.</span></li>
             </ul>
             <p>Veja os exemplos usando px a seguir:</p>
             <div class="examples">
