--- a/_textos-css-tutorial/13-css-font-style.html
+++ b/_textos-css-tutorial/13-css-font-style.html
@@ -16,9 +16,9 @@
             <h2>Font Style</h2>
             <p>Para mudar o estilo de um texto use "font-style: ;".</p>
             <ul type="circle">
-                <li><span>normal</span> - O texto será mostrado normalmente.</li>
-                <li><span>italic</span> - O texto será mostrado em itálico.</li>
-                <li><span>oblique</span> - O texto ficará inclinado (muito parecido com o itálico, mas é menos suportado).</li>
+                <li><span class="bold">normal</span> - O texto será mostrado normalmente.</li>
+                <li><span class="bold">italic</span> - O texto será mostrado em itálico.</li>
+                <li><span class="bold">oblique</span> - O texto ficará inclinado (muito parecido com o itálico, mas é menos suportado).</li>
             </ul>
             <p>Veja os exemplos a seguir:</p>
             <div class="examples">
