--- a/_textos-css-tutorial/15-css-links.html
+++ b/_textos-css-tutorial/15-css-links.html
@@ -33,7 +33,7 @@
             <div class="examples">
                 <p><a class="four" target="_self" href="../_textos-css-tutorial/15-css-links.html">CSS Links</a></p>
             </div>
-            <p><span>Observações importantes:</span></p>
+            <p><span class="bold">Observações importantes:</span></p>
             <p>"a:hover" deve vir depois de "a:link" e "a:visited" para ser eficiente.</p>
             <p>"a:active" deve vir depois de "a:hover" para ser eficiente.</p>
             <p>Se um link tiver como endereço a página que você já está, ele definirá que o link já foi visitado, mesmo você não tendo clicado nele.</p>
