--- a/_textos-css-tutorial/17-css-table-alignment.html
+++ b/_textos-css-tutorial/17-css-table-alignment.html
@@ -16,7 +16,7 @@
             <h2>Horizontal Alignmentt</h2>
             <p>Por padrão o alinhamento de um cabeçalho de uma tabela é centralizado e o alinhamento dos dados são são alinhados a esquerda. Para mudar isso basta usar "text-align: ;".</p>
             <p>Veja os exemplos a seguir:</p>
-            <span><p>Centralizado</p></span>
+            <p><span class="bold">Centralizado</span></p>
             <div class="examples">
                 <table class="one">
                     <tr>
@@ -33,7 +33,7 @@
                     </tr>
                 </table>
             </div> 
-            <span><p>Alinhado a esquerda</p></span>
+           <p><span class="bold">Alinhado a esquerda</span></p>
             <div class="examples">
                 <table class="two">
                     <tr>
@@ -57,7 +57,7 @@
             <h2>Vertical Alignment</h2>
             <p>Use "vertical-align: ;" para definir qual será o alinhamento vertical (top, bottom, middle).</p>
             <p>Veja os exemplos a seguir:</p>
-            <span><p>Dados da lista alinhados ao topo</p></span>
+            <p><span class="bold">Dados da lista alinhados ao topo</span></p>
             <table class="three">
                 <tr>
                     <th>Primeiro nome</th>
@@ -72,7 +72,7 @@
                     <td>Santos</td>
                 </tr>
             </table>
-            <span><p>Dados da lista alinhados ao fundo</p></span>
+            <p><span class="bold">Dados da lista alinhados ao fundo</span></p>
             <table class="four">
                 <tr>
                     <th>Fruta</th>
@@ -93,7 +93,7 @@
             </table>
             <h2>Caption</h2>
             <p>Use "caption-side: ;" para definit onde a legenda ficará (cima, fundo, etc.).</p>
-            <p><span>Observação.:</span> defina o valor de height para perceber o efeito do "vertical-align: ;".</p>
+            <p><span class="bold">Observação.:</span> defina o valor de height para perceber o efeito do "vertical-align: ;".</p>
         </div>
     </div>
 </body>
