--- a/_textos-css-tutorial/17-css-table-style.html
+++ b/_textos-css-tutorial/17-css-table-style.html
@@ -109,7 +109,7 @@
             <h2>Striped Tables</h2>
             <p>Use o "seletor nth-child(even or odd)" e adicine um "background-color: ;" para todas as linhas de tabela pares ou ímpares.</p>
             <p>Veja os exemplos a seguir:</p>
-            <span><p>tr:nth-child(even) {background-color: steelblue;}</p></span>
+            <p><span class="bold">tr:nth-child(even) {background-color: steelblue;}</span></p>
             <table class="six">
                 <tr>
                     <th>Fruta</th>
@@ -128,7 +128,7 @@
                     <td>3,00</td>
                 </tr>
             </table>
-            <span><p>tr:nth-child(odd) {background-color: steelblue;}</p></span>
+            <p><span class="bold">tr:nth-child(odd) {background-color: steelblue;}</span></p>
             <table class="seven">
                 <tr>
                     <th>Fruta</th>
