--- a/_textos-css-tutorial/6-css-borders.html
+++ b/_textos-css-tutorial/6-css-borders.html
@@ -22,16 +22,16 @@
             <p>Se você não usar "border-style: ;" ou ao menos selecionar esse parâmetro, as outras formatações de borda não funcionarão.</p>
             <p>Você pode selecionar esses tipos de borda:</p>
             <ul type="circle">
-                <li><span>dotted</span> - Cria uma borda pontilhada;</li>
-                <li><span>dashed</span> - Cria uma borda tracejada;</li>
-                <li><span>solid</span> - Cria uma borda sólida;</li>
-                <li><span>double</span> - Cria uma borda dupla;</li>
-                <li><span>groove</span> - Cria uma borda 3D em que a borda superior esquerda assumirá um tom diferente da cor selecionada. O efeito depende da cor da borda. Parece um quadro, da uma impressão de profundidade;</li>
-                <li><span>ridge</span> - Cria uma borda 3D em que a borda superior esquerda assumirá a cor selecionada. O efeito depende da cor da borda. Parece um quadro, da uma impressão de profundidade;</li>
-                <li><span>inset</span> - Cria uma borda 3D em que a borda superior esquerda assumirá um tom diferente da cor selecionada. O efeito depende da cor da borda;</li>
-                <li><span>outset</span> - Cria uma borda 3D em que a borda superior esquerda assumirá um tom a cor selecionada. O efeito depende da cor da borda;</li>
-                <li><span>none</span> - O elemento fica sem borda;</li>
-                <li><span>hidden</span> - Cria uma borda escondida. Não sei bem pra que serve.</li>
+                <li><span class="bold">dotted</span> - Cria uma borda pontilhada;</li>
+                <li><span class="bold">dashed</span> - Cria uma borda tracejada;</li>
+                <li><span class="bold">solid</span> - Cria uma borda sólida;</li>
+                <li><span class="bold">double</span> - Cria uma borda dupla;</li>
+                <li><span class="bold">groove</span> - Cria uma borda 3D em que a borda superior esquerda assumirá um tom diferente da cor selecionada. O efeito depende da cor da borda. Parece um quadro, da uma impressão de profundidade;</li>
+                <li><span class="bold">ridge</span> - Cria uma borda 3D em que a borda superior esquerda assumirá a cor selecionada. O efeito depende da cor da borda. Parece um quadro, da uma impressão de profundidade;</li>
+                <li><span class="bold">inset</span> - Cria uma borda 3D em que a borda superior esquerda assumirá um tom diferente da cor selecionada. O efeito depende da cor da borda;</li>
+                <li><span class="bold">outset</span> - Cria uma borda 3D em que a borda superior esquerda assumirá um tom a cor selecionada. O efeito depende da cor da borda;</li>
+                <li><span class="bold">none</span> - O elemento fica sem borda;</li>
+                <li><span class="bold">hidden</span> - Cria uma borda escondida. Não sei bem pra que serve.</li>
             </ul>
             <p>Veja os exemplos a seguir:</p>
             <h3 class="dotted">A dotted border.</h3>
