--- a/_textos-css-tutorial/all-list-style-types.html
+++ b/_textos-css-tutorial/all-list-style-types.html
@@ -15,133 +15,133 @@
             <h1>All List Style Types</h1>
 
             <ul class="a">
-            <li><span>Circle type</span></li>
+            <li><span class="bold">Circle type</span></li>
             <li>Tea</li>
             <li>Coca Cola</li>
             </ul>
 
             <ul class="b">
-            <li><span>Disc type</span></li>
+            <li><span class="bold">Disc type</span></li>
             <li>Tea</li>
             <li>Coca Cola</li>
             </ul>
 
             <ul class="c">
-            <li><span>Square type</span></li>
+            <li><span class="bold">Square type</span></li>
             <li>Tea</li>
             <li>Coca Cola</li>
             </ul>
 
             <ol class="d">
-            <li><span>Armenian type</span></li>
+            <li><span class="bold">Armenian type</span></li>
             <li>Tea</li>
             <li>Coca Cola</li>
             </ol>
 
             <ol class="e">
-            <li><span>Cjk-ideographic type</span></li>
+            <li><span class="bold">Cjk-ideographic type</span></li>
             <li>Tea</li>
             <li>Coca Cola</li>
             </ol>
 
             <ol class="f">
-            <li><span>Decimal type</span></li>
+            <li><span class="bold">Decimal type</span></li>
             <li>Tea</li>
             <li>Coca Cola</li>
             </ol>
 
             <ol class="g">
-            <li><span>Decimal-leading-zero type</span></li>
+            <li><span class="bold">Decimal-leading-zero type</span></li>
             <li>Tea</li>
             <li>Coca Cola</li>
             </ol>
 
             <ol class="h">
-            <li><span>Georgian type</span></li>
+            <li><span class="bold">Georgian type</span></li>
             <li>Tea</li>
             <li>Coca Cola</li>
             </ol>
 
             <ol class="i">
-            <li><span>Hebrew type</span></li>
+            <li><span class="bold">Hebrew type</span></li>
             <li>Tea</li>
             <li>Coca Cola</li>
             </ol>
 
             <ol class="j">
-            <li><span>Hiragana type</span></li>
+            <li><span class="bold">Hiragana type</span></li>
             <li>Tea</li>
             <li>Coca Cola</li>
             </ol>
 
             <ol class="k">
-            <li><span>Hiragana-iroha type</span></li>
+            <li><span class="bold">Hiragana-iroha type</span></li>
             <li>Tea</li>
             <li>Coca Cola</li>
             </ol>
 
             <ol class="l">
-            <li><span>Katakana type</span></li>
+            <li><span class="bold">Katakana type</span></li>
             <li>Tea</li>
             <li>Coca Cola</li>
             </ol>
 
             <ol class="m">
-            <li><span>Katakana-iroha type</span></li>
+            <li><span class="bold">Katakana-iroha type</span></li>
             <li>Tea</li>
             <li>Coca Cola</li>
             </ol>
 
             <ol class="n">
-            <li><span>Lower-alpha type</span></li>
+            <li><span class="bold">Lower-alpha type</span></li>
             <li>Tea</li>
             <li>Coca Cola</li>
             </ol>
 
             <ol class="o">
-            <li><span>Lower-greek type</span></li>
+            <li><span class="bold">Lower-greek type</span></li>
             <li>Tea</li>
             <li>Coca Cola</li>
             </ol>
 
             <ol class="p">
-            <li><span>Lower-latin type</span></li>
+            <li><span class="bold">Lower-latin type</span></li>
             <li>Tea</li>
             <li>Coca Cola</li>
             </ol>
 
             <ol class="q">
-            <li><span>Lower-roman type</span></li>
+            <li><span class="bold">Lower-roman type</span></li>
             <li>Tea</li>
             <li>Coca Cola</li>
             </ol>
 
             <ol class="r">
-            <li><span>Upper-alpha type</span></li>
+            <li><span class="bold">Upper-alpha type</span></li>
             <li>Tea</li>
             <li>Coca Cola</li>
             </ol>
 
             <ol class="s">
-            <li><span>Upper-latin type</span></li>
+            <li><span class="bold">Upper-latin type</span></li>
             <li>Tea</li>
             <li>Coca Cola</li>
             </ol>
 
             <ol class="t">
-            <li><span>Upper-roman type</span></li>
+            <li><span class="bold">Upper-roman type</span></li>
             <li>Tea</li>
             <li>Coca Cola</li>
             </ol>
 
             <ol class="u">
-            <li><span>None type</span></li>
+            <li><span class="bold">None type</span></li>
             <li>Tea</li>
             <li>Coca Cola</li>
             </ol>
 
             <ol class="v">
-            <li><span>inherit type</span></li>
+            <li><span class="bold">inherit type</span></li>
             <li>Tea</li>
             <li>Coca Cola</li>
             </ol>
