--- a/_textos-css-tutorial/13-css-fonts.html
+++ b/_textos-css-tutorial/13-css-fonts.html
@@ -8,10 +8,6 @@
     <link rel="stylesheet" href="../_css/geral-link.css"/>
     <link rel="icon" type="image/x-icon" href="../_imagens/blue-kinstone.png"/>
     <style>
-        span {
-            font-weight: bold;
-        }
-
         div.examples p {
             font-size: 16pt;
             text-align: center;
@@ -46,11 +42,11 @@
             <h2>Generic Font Families and Commonly Used Font Fallbacks</h2>
             <p>No CSS temos 5 famílias de fontes genéricas:</p>
             <ul type="circle">
-                <li><span>Serif</span> - As fontes terão um traço na borda de cada letra. Cria uma impressão de formalidade e elegância;</li>
-                <li><span>Sans-serif</span> - As fontes terão somente suas linhas normais. Cria uma impressão moderna e minimalista;</li>
-                <li><span>Monospace</span> - As fontes terão letras com o mesmo comprimento. Cria uma impressão mecânica;</li>
-                <li><span>Cursive</span> - As fontes irão se parecer com a escrita humana;</li>
-                <li><span>Fantasy</span> - As fontes irão ser criativas, "exóticas".</li>
+                <li><span class="bold">Serif</span> - As fontes terão um traço na borda de cada letra. Cria uma impressão de formalidade e elegância;</li>
+                <li><span class="bold">Sans-serif</span> - As fontes terão somente suas linhas normais. Cria uma impressão moderna e minimalista;</li>
+                <li><span class="bold">Monospace</span> - As fontes terão letras com o mesmo comprimento. Cria uma impressão mecânica;</li>
+                <li><span class="bold">Cursive</span> - As fontes irão se parecer com a escrita humana;</li>
+                <li><span class="bold">Fantasy</span> - As fontes irão ser criativas, "exóticas".</li>
             </ul>
             <p>Todas as outras fontes diferentes das que foram citas pertencem a uma dessas fontes genéricas.</p>
             <h2>Difference Between Serif and Sans-serif Fonts</h2>
