--- a/_textos-css-tutorial/16-css-lists.html
+++ b/_textos-css-tutorial/16-css-lists.html
@@ -42,8 +42,8 @@
             <h2>HTML Lists and CSS List Properties</h2>
             <p>No HTML temos duas listas principais:</p>
             <ul type="circle">
-                <li><span>Lista desordenada</span> - Os itens da lista são marcados com coisas que não possuem ordem (círculos, quadrados, etc.);</li>
-                <li><span>Lista ordenada</span> - Os itens da lista são marcados com números ou letras que indicam ordem.</li>
+                <li><span class="bold">Lista desordenada</span> - Os itens da lista são marcados com coisas que não possuem ordem (círculos, quadrados, etc.);</li>
+                <li><span class="bold">Lista ordenada</span> - Os itens da lista são marcados com números ou letras que indicam ordem.</li>
             </ul>
             <p>O CSS permite:</p>
             <ul type="circle">
@@ -72,11 +72,11 @@
             <p>Use "list-style-position" para especificar a posição do marcador.</p>
             <p>Você pode selecionar uma dos valores a seguir:</p>
             <ul class="one" type="circle">
-               <li><span>outside</span></li>
+               <li><span class="bold">outside</span></li>
                <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eget ligula eu lectus lobortis condimentum. <span>É o valor padrão.</span></li>
             </ul>
             <ul class="two" type="circle">
-                <li><span>inside</span></li>
+                <li><span class="bold">inside</span></li>
                 <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eget ligula eu lectus lobortis condimentum. Aliquam nonummy auctor massa. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.<span> Veja que desse jeito o marcador empurra um pouco o texto, ele vem mais pra direita.</span></li>
             </ul>
             <h2>Remove Default Settings</h2>
